--- a/css/responsive.css
+++ b/css/responsive.css
@@ -368,6 +368,9 @@
     .primary-nav .header-contact ul li:last-child a span {
         display: none;
     }
+    .mobile-menu .mobile-nav li a {
+        text-align: center;
+    }
     #home-content .home {
         padding-top: 60px;
     }
@@ -376,7 +379,8 @@
     }
     .who-we-are .who-we-are-box {
         height: 350px;
-    } .who-we-are .who-we-are-box img {
+    }
+    .who-we-are .who-we-are-box img {
         width: 100px;
         height: 100px;
     }
@@ -428,9 +432,21 @@
         margin-bottom: -1px;
     }
     .products .section-curve:last-child {
+        width: 100%;
+        height: 25px;
         margin-top: -1px;
+    }
+    .products .section-curve:last-child img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
     .who-we-are .section-curve {
         margin-bottom: -1px;
+    }
+    .copyright {
+        margin-top: 25px;
+        padding: 20px 0;
+        text-align: center;
     }
 }
