--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body {
     font-family: var(--primary-font);
     letter-spacing: normal;
     line-height: normal;
+    overflow-x: hidden;
 }
 
 ul {
@@ -80,6 +81,24 @@ h1, h2, h3, h4, h5 {
 p {
     margin: 0;
     font-family: var(--secondary-font);
+}
+
+.preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: var(--primary-bg-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99999;
+}
+
+.preloader img {
+    width: 160px;
+    height: 160px;
 }
 
 .btn-general {
